--- a/style.css
+++ b/style.css
@@ -62,7 +62,6 @@ li {
     padding-left: 16px;
     color: #243e63;
     display: flex;
-    justify-content: space-around;
     margin: 12px;
     padding-top: 30px;
 }
@@ -225,9 +224,7 @@ li {
     .services__para {
         display: flex;
         text-align: center;
-        padding-top: 40px;
         color: #7c8ba1;
-        width: 100%;
         padding-top: 40px;
         font-size: 18px; 
         width: 60%;
@@ -358,6 +355,7 @@ li {
         width: 50%;
         display: flex;
         flex-direction: column;
+       
     }
 
     .steps__header {
@@ -376,25 +374,23 @@ li {
 
     .lists__wrapper {
         display: flex;
-        flex-direction: column;
-        
+        flex-direction: column; 
     }
 
-    .lists {
-       display: flex;
-       flex-direction: column;
-    }
 
     .list__numbers {
         font-size: 36px;
         font-weight: 500;
         color: #CBD5E0;
+        padding-right: 24px;
+        
     }
 
     .list__header {
         font-size: 20px;
         font-weight: 500;
         color: #243e63;
+        
     }
 
     .list__para {
@@ -402,6 +398,41 @@ li {
         font-weight: 500;
         color: #718096;
         margin: 12px 0px 0px;
+        
     }
 
-   
+     /* Pricing */
+
+     .pricing__section {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+     }
+
+     .pricing__header {
+        font-size: 16px;
+        font-weight: 700;
+        color: #6415ff;
+        text-align: center;
+        padding-top: 46px;
+        letter-spacing: 2px;
+     }
+
+     .pricing__subhead {
+        text-align: center;
+        font-size: 48px;
+        color: #243e63;
+        padding-top: 32px;
+        font-weight: 900;
+     }
+
+     .pricing__para {
+        text-align: center;
+        color: #7c8ba1;
+        padding-top: 40px;
+        font-size: 18px;
+        max-width: 36rem;
+        
+     }
