--- a/style.css
+++ b/style.css
@@ -436,3 +436,125 @@ li {
         max-width: 36rem;
         
      }
+
+     .threeplans__container {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: justify;
+        justify-content: space-between;
+        flex-wrap: wrap;
+     }
+
+     .plan__highlight {
+        position: absolute;
+        left: 0px;
+        right: 0px;
+        top: 0px;
+        height: 0.5rem;
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+        background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+        
+     }
+
+     .personal__plan {
+        position: relative;
+        margin-top: 4rem;
+        display: flex;
+        width: 100%;
+        max-width: 24rem;
+        flex-direction: column;
+        border-radius: 0.5rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding-top: 0.5rem;
+        text-align: center;
+        box-sizing: border-box;
+        border-width: 1px;
+        border-style: solid;
+        border-color: rgb(226 232 240);
+     }
+
+     .threeplans__header {
+        display: flex;
+        flex-direction: column;
+        padding-top: 2rem;
+        text-transform: uppercase;
+        line-height: 1.625;
+        box-sizing: border-box;
+        border-width: 1px;
+        
+
+        
+        
+     }
+
+     .name {
+        font-size: 20px;
+        color: #1a202c;
+        font-weight: 700;
+     }
+
+     .price {
+        font-size: 48px;
+        color: #1a202c;
+        font-weight: 700;
+        margin: 4px 0px;
+     }
+
+     .duration {
+        font-size: 16px;
+        font-weight: 700;
+        letter-spacing: 0.1rem;
+        color: #a0aec0;
+     }
+
+     .threeplans__features {
+        margin-left: -2rem;
+        margin-right: -2rem;
+        display: flex;
+        flex-direction: column;
+        border-top-width: 2px;
+        border-bottom-width: 2px;
+        padding: 2rem;
+     }
+
+     .feature__mainfeature {
+        margin-top: 0px;
+        font-size: 1.25rem;
+        font-weight: 700;
+        letter-spacing: 0.025em;
+     }
+
+     .feature {
+        margin-top: 1.25rem;
+        font-weight: 500;
+        font-size: 16px;
+        color: #718096;
+        margin: 20px 0px 0px;
+     }
+
+     .threeplans__action {
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding: 2rem 1rem;
+     }
+
+     .plans__button {
+        background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+        width: 100%;
+        border-radius: 9999px;
+        border: none;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        color: #FFFFFF;
+        font-size: 14px;
+        letter-spacing: 0.05em;
+        font-weight: 700;
+        cursor: pointer;
+        
+     }
+
