--- a/style.css
+++ b/style.css
@@ -476,6 +476,7 @@ li {
         border-width: 1px;
         border-style: solid;
         border-color: rgb(226 232 240);
+        
      }
 
      .threeplans__header {
@@ -486,8 +487,8 @@ li {
         line-height: 1.625;
         box-sizing: border-box;
         border-width: 1px;
-        
-
+        border-bottom: solid;
+        border-color: rgb(226 232 240);
         
         
      }
@@ -520,6 +521,8 @@ li {
         border-top-width: 2px;
         border-bottom-width: 2px;
         padding: 2rem;
+        border-bottom: solid;
+        border-color: rgb(226 232 240);
      }
 
      .feature__mainfeature {
@@ -527,6 +530,7 @@ li {
         font-size: 1.25rem;
         font-weight: 700;
         letter-spacing: 0.025em;
+        
      }
 
      .feature {
@@ -554,7 +558,6 @@ li {
         font-size: 14px;
         letter-spacing: 0.05em;
         font-weight: 700;
-        cursor: pointer;
-        
+        cursor: pointer; 
      }
 
