--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ li {
         width: 100%;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        
     
      }
 
@@ -438,14 +438,10 @@ li {
      }
 
      .threeplans__container {
-        position: relative;
         display: flex;
-        flex-direction: column;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: justify;
         justify-content: space-between;
         flex-wrap: wrap;
+
      }
 
      .plan__highlight {
@@ -486,11 +482,7 @@ li {
         text-transform: uppercase;
         line-height: 1.625;
         box-sizing: border-box;
-        border-width: 1px;
-        border-bottom: solid;
-        border-color: rgb(226 232 240);
-        
-        
+    
      }
 
      .name {
@@ -514,14 +506,15 @@ li {
      }
 
      .threeplans__features {
-        margin-left: -2rem;
-        margin-right: -2rem;
         display: flex;
         flex-direction: column;
         border-top-width: 2px;
         border-bottom-width: 2px;
         padding: 2rem;
+        border-top: solid;
+        border-top-width: 2px;
         border-bottom: solid;
+        border-bottom-width: 2px;
         border-color: rgb(226 232 240);
      }
 
@@ -529,8 +522,7 @@ li {
         margin-top: 0px;
         font-size: 1.25rem;
         font-weight: 700;
-        letter-spacing: 0.025em;
-        
+        letter-spacing: 0.025em; 
      }
 
      .feature {
@@ -561,3 +553,4 @@ li {
         cursor: pointer; 
      }
 
+    
