--- a/style.css
+++ b/style.css
@@ -433,7 +433,9 @@ li {
         color: #7c8ba1;
         padding-top: 40px;
         font-size: 18px;
-        max-width: 36rem;
+        padding-left: 20%;
+        padding-right: 20%;
+        
         
      }
 
@@ -441,7 +443,7 @@ li {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-
+        
      }
 
      .plan__highlight {
@@ -456,7 +458,7 @@ li {
         
      }
 
-     .personal__plan {
+     .plans {
         position: relative;
         margin-top: 4rem;
         display: flex;
@@ -464,8 +466,6 @@ li {
         max-width: 24rem;
         flex-direction: column;
         border-radius: 0.5rem;
-        padding-left: 2rem;
-        padding-right: 2rem;
         padding-top: 0.5rem;
         text-align: center;
         box-sizing: border-box;
@@ -540,7 +540,7 @@ li {
      }
 
      .plans__button {
-        background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(129, 230, 217) 100%);
+        background: linear-gradient(115deg, rgb(56, 178, 172) 0%, rgb(75, 226, 206) 100%);
         width: 100%;
         border-radius: 9999px;
         border: none;
@@ -550,7 +550,50 @@ li {
         font-size: 14px;
         letter-spacing: 0.05em;
         font-weight: 700;
-        cursor: pointer; 
+        cursor: pointer;   
      }
 
-    
+     .plans__button:hover {
+      box-shadow: #1a202c1a 2pt 2pt 2pt 2pt;
+}       
+
+
+
+     #blue__plans {
+        background-image: linear-gradient(135deg, rgb(76, 81, 191) 0%, rgb(102, 126, 234) 100%);      
+        color: white;
+     }
+
+     .blue_plan_text {
+        color: white;
+     }
+
+     #blue_plan_button {
+        background: white;
+        color: #6415ff;
+     }
+
+     #blue_border {
+        border-color: rgb(150, 169, 255);
+     }
+
+     #red_highlight {
+        background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+     }
+
+     #red_button {
+        background: linear-gradient(115deg, rgb(245, 101, 101) 0%, rgb(254, 178, 178) 100%);
+     }
+
+
+     /* TESTEMONIALS */
+
+     .testimonials__section {
+        display: flex;
+     }
+
+     #testimonials_pic{
+        width: 100%;
+     }
+
+   
